infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: alaay/client:latest
---
#cluster ip configuration
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip-srv
spec:
  #if you omit type k8 will automatically assume its a cluster IP
  type: ClusterIP
  selector:
    # select pods of type app: client like in depl.yml labels: app: posts
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
