infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: alaay/comments:latest
---
#cluster ip configuration
apiVersion: v1
kind: Service
metadata:
  name: comments-clusterip-srv
spec:
  #if you omit type k8 will automatically assume its a cluster IP
  type: ClusterIP
  selector:
    # select pods of type app: comments like in depl.yml labels: app: posts
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
