infra/k8s/event-bus-depl.yaml
#event bus deployment conf
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: alaay/event-bus:latest
---
#cluster ip configuration
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  #if you omit type k8 will automatically assume its a cluster IP
  type: ClusterIP
  selector:
    # select pods of type app: posts like in depl.yml labels: app: posts
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
