infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: alaay/posts:latest
---
#cluster ip configuration
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  #if you omit type k8 will automatically assume its a cluster IP
  type: ClusterIP
  selector:
    # select pods of type app: posts like in depl.yml labels: app: posts
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
