infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: alaay/query:latest
---
#cluster ip configuration
apiVersion: v1
kind: Service
metadata:
  name: query-clusterip-srv
spec:
  #if you omit type k8 will automatically assume its a cluster IP
  type: ClusterIP
  selector:
    # select pods of type app: posts like in depl.yml labels: app: posts
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
